--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "dependencies": {
       "discord.js": "^13.6.0",
       "dotenv": "^10.0.0"
+    },
+    "engines": {
+    "node": ">= 6.9.4",
+    "npm": ">= 4.4.0"
     }
   }
