--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
-    "author": "@ALEXA#0114",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/TrollerZLabZ/DiscordVanityRoleGiver"
-    },
+    "author": "maksim",
     "license": "GNU",
     "dependencies": {
       "discord.js": "^13.6.0",
